--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__logo"><a href="#"><img src="./assets/logo1.svg" alt="logo"></a></li>
-                    <li class="header__link"><a href="#">About us</a></li>
-                    <li class="header__link"><a href="#">About us</a></li>
-                    <li class="header__link"><a href="#">About us</a></li>
-                    <li class="header__link"><a href="#">About us</a></li>
+                    <li class="header__link"><a href="#aboutus">ABOUT US</a></li>
+                    <li class="header__link"><a href="#projects">PROJECTS</a></li>
+                    <li class="header__link"><a href="#news">NEWS</a></li>
+                    <li class="header__link"><a href="#contact">CONTACT</a></li>
                     <li class="header__link"><a href="#"><img src="./assets/logo2.svg"></a></li>
                     <li class="header__link"><a href="#"><img src="./assets/logo3.svg"></a></li>
                     <li class="header__link"><a href="#"><img src="./assets/logo4.svg"></a></li>
@@ -66,7 +66,7 @@
         </section>
     </div>
 
-    <article class="first-article">
+    <article class="first-article"  id="aboutus">
         <div class="container">
            <div class="first-article__line"><img src="./assets/line.svg"></div>
             <div class="first-article__title">
@@ -92,7 +92,7 @@
         </div>
     </article>
 
-    <article class="second-article">
+    <article class="second-article" id="projects">
         <div class="container">
             <div class="second-article__contains">
             
@@ -114,7 +114,7 @@
         </div>
     </article>
 
-    <section class="latest-news">
+    <section class="latest-news" id="news">
         <div class="container">
         <div class="latest-news__first">
             <img class="latest-news__vija" src="./assets/line2.svg" alt="">
