--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         </div>
     </article>
-    <section class="latest-news">
+    <article class="latest-news">
         <div class="container">
         <div class="latest-news__first">
             <img class="latest-news__vija" src="./assets/line--white.svg" alt="">
@@ -178,7 +178,7 @@
             </article>
         </div>
     </div> 
-    </section>
+</article>
     
 
 <section class="gallery" id="gallery">
