--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </article>
 
     <article class="second-article" id="projects">
-        <div class="container">
+        
             <div class="second-article__contains">
                 <div class="second-article__oneWorld">
                 <h3 class="second-article__title1">INTERNATIONAL</h3>
@@ -104,14 +104,14 @@
                 <a href="#" class="fa_button" >More Details</a> 
                 <div class="second-article__location">
                     <img src="./assets/location-logo.svg">
-                    <p class="second-article__p2">New York City, United States - 1776 feet </p>
+                    <p class="second-article__p2">Hong Kong - 1588 feet </p>
                 </div></div>
                 <div class="second-article__image">
                     <img src="./assets/group-picture2.png">
                 </div>
             </div>
 
-        </div>
+       
     </article>
     <article class="latest-news">
         <div class="container">
